# CrappyBird

./: .gitignore  .gitmodules  CMakeLists.txt  CrappyBird.uproject  SCsub  build.ps1  crappy_movement.cpp  crappy_movement.h  crappybird.cpp  crappybird.h  launch_editor.ps1  register_types.cpp  register_types.h
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: Level1.umap  body.uasset  crappy_bird.fbx  crappy_bird.uasset  crappy_bird_PhysicsAsset.uasset  crappy_bird_Skeleton.uasset  eye.uasset  pupil.uasset  red.uasset  separation.uasset
GameFiles/: node_2d.gd  node_2d.tscn  project.godot
RawArt/: crappy_bird.blend1
Source/: CrappyBird.Target.cs  CrappyBirdEditor.Target.cs
Source/CrappyBird/: CrappyBird.Build.cs  CrappyBird.cpp
assets/: crappy_bird.blend  crappy_bird.m3d
game/: export_presets.cfg  icon.svg.import  launch_editor.ps1  project.godot
game/assets/: crappy_bird.blend  crappy_bird.blend.import  crappy_bird.blend1  crappy_bird.tscn  flappy-ref.jpg.import
game/scenes/: bird.gd  bird.tscn  main.tscn  node_2d.tscn
game/scripts/: bird.gd  crappy_movement_component.gd
src/: crappy_movement_component.cpp  crappy_movement_component.h  main.cpp
